' Generated by UML Generator
' Encoded: hLLDZzem5BpdL_W89Qcuz8BQrI98AoHsYmfxgghASRpqgOwDR6SFtUv_hvFOmH-57hONXETvPknv3tEhD9QwRLYcVW8_OOaRH1XMQgcrXAhLT4C4tyClYkRP3wWf8Y09erdMxq8h1fHhYfupX0ekcahI1TeRAZzs215IKk4ZDKXA20ZkWuNvc5cfoTHVX98v2WLpbCZrx2FLzprnClLiPcg4GrcpwKb0RPchtY9XMZWyGCXSkyCav7CbFV1PGei1ykWlBkWx3BnFUVPiMgQ1lA36G1CiZyhj_lhDYOsq7QsX5aDxo93fmZMjmqvIr2tHmcXiGUdtExk-6TioA0nTiTzZeMkr75sqw6a4Cz8oB0z2OzPT_949hBjA8vIMM7wXgcre52dcs0Jfb2REOjd32-GANhQKGGCS_uLJsaf0guHW5FCkI5nrvo0QsKJjfaiZVpBz1N6-XqtHsKw3LJpU0VdrexphvO9KrOY6NbUdqEjJB7cUD7kdDHp1j3AQrNMvNpsKzuVFtzURJvl3Sclvw0EQlvs_U-o2Oa0e9u3zD3LkC1Sblwik9Mhzmc0TU3NV7CMEEKhyN1EsTckOYYaSHaQSyqY9RRomLI2Gkl-tjdm41SGz1EQNHKl-T7bCXzrXfXRxHwI9zdHyLbqXpichfEnN163VlZT5CRvu5X86SjVAui4jYjytQTNc5nPlAQ_DV-SV
' URL: http://www.plantuml.com/plantuml/uml/hLLDZzem5BpdL_W89Qcuz8BQrI98AoHsYmfxgghASRpqgOwDR6SFtUv_hvFOmH-57hONXETvPknv3tEhD9QwRLYcVW8_OOaRH1XMQgcrXAhLT4C4tyClYkRP3wWf8Y09erdMxq8h1fHhYfupX0ekcahI1TeRAZzs215IKk4ZDKXA20ZkWuNvc5cfoTHVX98v2WLpbCZrx2FLzprnClLiPcg4GrcpwKb0RPchtY9XMZWyGCXSkyCav7CbFV1PGei1ykWlBkWx3BnFUVPiMgQ1lA36G1CiZyhj_lhDYOsq7QsX5aDxo93fmZMjmqvIr2tHmcXiGUdtExk-6TioA0nTiTzZeMkr75sqw6a4Cz8oB0z2OzPT_949hBjA8vIMM7wXgcre52dcs0Jfb2REOjd32-GANhQKGGCS_uLJsaf0guHW5FCkI5nrvo0QsKJjfaiZVpBz1N6-XqtHsKw3LJpU0VdrexphvO9KrOY6NbUdqEjJB7cUD7kdDHp1j3AQrNMvNpsKzuVFtzURJvl3Sclvw0EQlvs_U-o2Oa0e9u3zD3LkC1Sblwik9Mhzmc0TU3NV7CMEEKhyN1EsTckOYYaSHaQSyqY9RRomLI2Gkl-tjdm41SGz1EQNHKl-T7bCXzrXfXRxHwI9zdHyLbqXpichfEnN163VlZT5CRvu5X86SjVAui4jYjytQTNc5nPlAQ_DV-SV
' Generated on: 2025-11-30T19:41:02.573646400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente()
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -cliente: Cliente
  -productos: List<Producto>
  --
  +Pedido()
  +Pedido(cliente: Cliente)
  +Pedido(cliente: Cliente, productos: List<Producto>)
  +calcularTotal(): float
  +mostrarResumen(): String
  +anadirProducto(productoAnadir: Producto): void
  +eliminarProducto(productoAEliminar: Producto): boolean
}

abstract class Producto {
  -nombre: String
  -precio: float
  --
  +Producto()
  +Producto(nombre: String, precio: float)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): float
  +setPrecio(precio: float): void
  +toString(): String
  +calcularPrecio(): float
}

class ProductoDigital {
  +{static} DESCUENTO_DIGITAL: float = 0.05f
  -licencia: String
  -tamanoEnMb: float
  --
  +ProductoDigital()
  +ProductoDigital(nombre: String, precio: float, licencia: String, tamanoEnMb: float)
  +getLicencia(): String
  +getTamanoEnMb(): float
  +setLicencia(licencia: String): void
  +setTamanoEnMb(tamanoEnMb: float): void
  +toString(): String
  +calcularPrecio(): float
}

class ProductoFisico {
  -costeEnvio: float
  --
  +ProductoFisico()
  +ProductoFisico(nombre: String, precio: float, costeEnvio: float)
  +getCosteEnvio(): float
  +setCosteEnvio(costeEnvio: float): void
  +toString(): String
  +calcularPrecio(): float
}

Pedido --- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml